<resources>
    <string name="app_name">Matrix</string>
    <string name="country">America</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>


</resources>
